--- a/assets/header.css
+++ b/assets/header.css
@@ -28,7 +28,7 @@ nav > ul > li > .dropdown {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #7E3EFE;
+    background-color: #8C52FF;
     position: absolute;
     top: 100%;
     max-height: 0;
