--- a/assets/header.css
+++ b/assets/header.css
@@ -35,6 +35,7 @@ nav > ul > li > .dropdown {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s ease-out;
+    border-radius: 0 0 10px 10px;
 }
 
 nav > ul > li > .dropdown > li {
@@ -56,10 +57,13 @@ nav > ul > li:hover .dropdown {
 a{
     color: #ffffff;
     text-decoration: none;
-    
 }
 
 .logo > img{
     width: 20%;
     height: 20%;
+}
+
+.btn-feedback{
+    padding: 30px;
 }
