--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@
 body{
     background-color: #343434;
     color: #fff;
+    font-family: "Poppins";
 }
 
 .intro::before{
@@ -39,14 +40,14 @@ body{
     background-color: #8c52ff68;
     padding: 15px 20px 15px 15px;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 15px;
     
 }
 
 .logo_olimpiadas{
-    width: 28%;
+    width: 29%;
     border-radius: 50%;
-    padding: 6%;
+    padding: 7%;
 }
 
 .slogan{
