--- a/assets/style.css
+++ b/assets/style.css
@@ -44,8 +44,8 @@ body{
     
 }
 
-.logo_olimpiadas{
-    width: 29%;
+.logo_olimpica{
+    width: 80%;
     border-radius: 50%;
     padding: 7%;
 }
