--- a/assets/footer.css
+++ b/assets/footer.css
@@ -17,7 +17,7 @@ footer {
 
 footer > div {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 footer > div > div {
@@ -43,14 +43,20 @@ footer > div > .pages > nav > ul > li {
 
 footer > div > .pages > nav > ul > li > a {
     text-decoration: none;
+    color: #000;
 }
 
 footer div > .copy > ul > li {
     list-style-type: none;
 }
 
-.social{
+.social > div {
+    width: 100%;
+}
 
+.social > div > a {
+    text-decoration: none;
+    color: #000;
 }
 
 .facebook {
@@ -60,13 +66,28 @@ footer div > .copy > ul > li {
 }
 
 .facebook > img {
-    height: 150%;
+    height: 100%;
+    margin-right: 10px; 
  }
 
 .insta{
+   height: 15%;
+   display: flex;
+   align-items: center;
+}
 
+.insta > img {
+    height: 100%;
+    margin-right: 10px;
 }
 
 .whatsapp{
+    height: 15%;
+    display: flex;
+    align-items: center;
+}
 
+.whatsapp > img {
+    height: 100%;
+    margin-right: 10px;
 }
