--- a/assets/style.css
+++ b/assets/style.css
@@ -382,3 +382,28 @@ body{
     margin: 0 0 0 10%;
     width: 28%;
 }
+
+/* Carrossel de Imagens */
+.carousel {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+}
+
+.carousel-wrapper {
+    display: flex;
+    transition: transform 1s ease-in-out;
+    
+}
+
+.carousel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: auto;
+}
