--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 .poppins-regular {
@@ -12,6 +11,10 @@
     font-weight: 700;
     font-style: normal;
   }
+
+* {
+    box-sizing: border-box;
+}
 
 body{
     background-color: #343434;
@@ -854,23 +857,72 @@ body{
 
 }
 
-.stars {
+.avaliacao {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.avaliacao > h2 {
+    color: #000;
+}
+
+label {
+    display: block;
+    margin: 10px 0 5px;
+    color: #000;
+}
+
+input[type="text"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="int"] {
+    border: 1px solid #ccc;
+}
+
+.submit-btn {
+    width: 100%;
+    font-family: "Poppins";
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 30px; /* Tamanho das estrelas */
-    color: #ddd; /* Cor padrão das estrelas */
 }
 
-.stars .star {
-    transition: color 0.2s;
+.submit-btn:hover {
+    background-color: #0056b3;
 }
 
-.stars .star:hover,
-.stars .star:hover ~ .star {
-    color: gold; /* Cor das estrelas ao passar o mouse */
+.avaliacoes-recentes {
+    display: flex;
+    margin: 5% 5%;
+    align-items: center;
+    flex-direction: column;
 }
 
-.stars .star.selected {
-    color: gold; /* Cor das estrelas selecionadas */
+.avaliacoes-recentes > div {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 40px;
+    padding: 10px;
+}
+
+.avaliacoes-recentes > div > div {
+    background-color: #fff;
+    color: #000;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 /* Quadro de Medalhas */
